<resources>
    <string name="app_name">ProyecteNadal</string>
    <string name="emails">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="logIn">Log In</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="buyAgain">Buy Again</string>
    <string name="account">My Account</string>
    <string name="signUp">Sign Up</string>
    <string name="configuration">Configuration</string>
    <string name="back">Back</string>
    <string name="recoverPassword">Recover Password</string>
    <string name="names">Name</string>
    <string name="textBelowRecover">Introduce your email linked to your account and we will send you an email to restore your password</string>
    <string name="ourProducts">Our products</string>
    <string name="buy">Buy</string>
    <string name="confirmOrder">Confirm Order</string>
    <string name="recipientName">Recipient Name</string>
    <string name="creditCard">Credit Card</string>
    <string name="shippingAddres">Shipping Adress</string>
    <string name="orderDate">Date</string>
    <string name="logOut">Log Out</string>
    <string name="addNewAddress">Add new shipping address</string>
    <string name="orderInformation">Order Information</string>
    <string name="cantity">Choose a quantity</string>
    <string name="details">Details</string>
    <string name="languages">Languages</string>
    <string name="myCart">My Cart</string>
    <string name="orderSummary">Order Summary</string>
    <string name="emptyCart">Your Cart is Empty</string>
    <string name="hello">Hello,</string>
    <string name="notifications">Notifications</string>
    <string name="ascending">Low to high</string>
    <string name="descending">High to low</string>
    <string name="YourProducts">Tus Productos</string>
    <string name="quantity">Quantity</string>
    <string name="choose">Choose</string>
    <string name="seller">Seller</string>
    <string name="client">Client</string>
    <string name="uploadDesc">Upload your products</string>
    <string name="manageOrdersDesc">Manage orders</string>
    <string name="buyDesc">Buy to our sellers</string>
    <string name="orderHistoryDesc">Order history</string>
    <string name="addToCart">Add to Shopping Cart</string>

    <!--ERRORES -->
    <string name="fieldsRequired">The fields are required.</string>
    <string name="samePassword">Your password must be the same.</string>
    <string name="nameField">Name field is required.</string>
    <string name="minimPassword">Your password must have atleast 6 letters.</string>
    <string name="verEmailSent">Verification email sent.</string>
    <string name="emailChanged">Email changed successfully.</string>
    <string name="passwordChanged">Password changed successfully.</string>
    <string name="productUpdated">Product updated successfully.</string>
    <string name="productDeleted">Product deleted successfully.</string>
    <string name="emailSentTo">Email sent to </string>
    <string name="emailNotValid">Invalid email.</string>
    <string name="insertEmail">Insert an email.</string>
    <string name="emailNotVerified">Email not verified</string>
    <string name="chooseOneImage">You must choose at least one image.</string>
    <string name="postalCode">Postal Code</string>
    <string name="town">Town</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="addImages">Add one or more images</string>
    <string name="add">Add</string>
    <string name="updateProduct">Update product</string>
    <string name="deleteProduct">Delete product</string>
    <string name="myAccDetails">My account details</string>
    <string name="favorites">Favorites</string>
    <string name="addProduct">Add product</string>
    <string name="fecha">Date</string>
    <string name="companyName">Company\'s name</string>


</resources>