<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:background="@color/fui_transparent"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.appbar.MaterialToolbar>
    <TextView
        android:id="@+id/orderInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/orders"
        android:textSize="25dp"></TextView>

    <ListView
        android:id="@+id/listadoCompra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:divider="@null" />

    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/direccionEnvio"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            app:smsp_underlineColor="@color/fui_transparent"
            android:background="@drawable/custom_button_rectangle"
            app:smsp_hint="@string/shippingAddres"
            android:spinnerMode="dropdown"
            app:smsp_selectedItemListColor="@color/black"
            ></com.chivorn.smartmaterialspinner.SmartMaterialSpinner>
        <Button android:layout_width="300dp"
            android:id="@+id/addShippingAddress"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/addNewAddress"
            android:drawableStart="@drawable/baseline_add_black_36"
            android:background="@drawable/custom_button_rectangle"/>
        <EditText
            android:id="@+id/metodoFacturacion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:padding="10dp"
            android:background="@drawable/custom_button_rectangle"
            android:layout_marginTop="30dp"
            android:hint="@string/creditCard"></EditText>
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shippingCartListView"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="TOTAL:"
            android:textAlignment="center"
            android:textColor="@color/black"></TextView>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="0"
            android:textColor="@color/black"></TextView>

        <Button
            android:id="@+id/botonComprarSummary"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button_orange"
            android:text="@string/confirmOrder"></Button>
    </LinearLayout>
</LinearLayout>
