<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white">



    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="349dp"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_visualize_products">
        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imagenProducto"
            android:layout_width="338dp"
            android:layout_height="315dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:iss_selected_dot="@drawable/selecteddot"
            app:iss_unselected_dot="@drawable/default_unselected_dot"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:padding="10dp"
            tools:src="@tools:sample/avatars" />
        <ImageView
            android:id="@+id/isFavBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@id/imagenProducto"
            android:layout_marginTop="10dp"
            android:src="@drawable/estrella" />

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/precioProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="Precio"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantity"></TextView>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cantitySpinner"></Spinner>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/details"></TextView>
    <TextView
        android:id="@+id/descripcionProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"></TextView>

    <Button
        android:background="@drawable/custom_button_orange"
        android:layout_gravity="center"
        android:id="@+id/addToShoppingCartBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"
        android:text="@string/addToCart" />
    <Button
        android:background="@drawable/custom_button_orange"
        android:layout_gravity="center"
        android:id="@+id/comprarButton"
        android:layout_width="200dp"
        android:textColor="@color/white"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/buy" />
</LinearLayout>