<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="349dp"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_visualize_products">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imagenProducto"
            android:layout_width="338dp"
            android:layout_height="315dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:padding="10dp"
            app:iss_selected_dot="@drawable/selecteddot"
            app:iss_unselected_dot="@drawable/default_unselected_dot"
            tools:src="@tools:sample/avatars" />
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/names"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@color/fui_transparent"
        android:text="Name"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="Precio"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@color/fui_transparent"
        android:text="Precio"
        android:inputType="numberDecimal"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textColor="@color/black"></TextView>

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="number"
        android:background="@color/fui_transparent"
        android:text="Cantidad"
        android:textColor="@android:color/darker_gray"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@color/fui_transparent"
        android:text="DESCRIPCION"
        android:maxLength="100"
        android:textColor="@android:color/darker_gray"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/updateProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateProduct"
            android:textAllCaps="false"
            android:padding="10dp"
            android:drawableStart="@drawable/outline_done_black_24"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_rectangle"></Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteProduct"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:drawableStart="@drawable/round_delete_black_24"
            android:text="@string/deleteProduct"
            android:background="@drawable/custom_button_rectangle"
            android:src="@drawable/baseline_delete_black_48"></Button>
    </LinearLayout>
</LinearLayout>