<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.FragmentPedidos">

    <TextView
        android:id="@+id/shippingCartText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignTop="@id/shippingCartListView"
        android:text="@string/myCart"
        android:textSize="25dp"
        android:layout_alignParentTop="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emptyCart"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/emptyCart"></TextView>
    <ListView
        android:id="@+id/shippingCartListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignBottom="@+id/shippingCartListView"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:divider="@color/white"
        android:dividerHeight="0dp"></ListView>
<LinearLayout

    android:layout_width="match_parent"
    android:gravity="center"
    android:id="@+id/bottomLayoutCart"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/transparent"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shippingCartListView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="TOTAL:"
        android:textAlignment="center"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalPrice"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="0"></TextView>

    <Button
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/botonComprarShipping"
        android:background="@drawable/custom_button_orange"
        android:text="@string/buy"></Button>

</LinearLayout>


</LinearLayout>